src/test/ui/asm-out-assign-imm.stderr
error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/asm-out-assign-imm.rs:29:9
   |
26 |     x = 1;
   |     ----- first assignment to `x`
...
29 |         asm!("mov $1, $0" : "=r"(x) : "r"(5));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot assign twice to immutable variable

error: aborting due to previous error

